# bevy_benchmark_games

./: Cargo.toml  README.md  build.rs
.cargo/: config
.github/: FUNDING.yml
examples/: asteroids.rs  breakout.rs
src/: cli.rs  lib.rs  main.rs  metrics.rs  random.rs
src/cli/: cmd.rs
