[package]
name = "bevy_benchmark_games"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

[dependencies]
bevy = { path = "../bevy" }
rand = "0.7.3"
rand_core = "0.5.1"
glam = "0.9.5"
perf-event = "0.4.5"
human_format = "1.0.3"
eyre = "0.6.1"
color-eyre = "0.5.6"
thiserror = "1.0.21"
tracing = "0.1.21"
tracing-subscriber = "0.2.13"
tracing-error = "0.1.2"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
argh = "0.1.3"
plotters = "0.3.0"
criterion = "0.3.3"
stats = "0.0.1"
criterion-stats = "=0.3.0"

[build-dependencies]
cfg_aliases = "0.1.0"

[features]
with-graphics = []

[profile.release]
debug = true
